collect and update metadata database. creation of database.

--- a/inst/metadata_templates/core.yml
+++ b/inst/metadata_templates/core.yml
@@ -1,5 +1,5 @@
 ---
-ID: ''
+id: ''
 emf_type: ''
 emf_public: false
 emf_automatized: false
@@ -7,6 +7,9 @@ emf_reproducible: false
 emf_draft: true
 edges: ['']
 authors: ['']
+authors_aff: ['']
 resource_link: ''
 thematic: ''
+tags: ['']
+requirements: ['']
 ---
