collecting metadata from all kind of resources testing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,6 @@ export(use_data_yml)
 export(use_metadata_yml)
 export(use_model_yml)
 export(use_softwork_yml)
-export(use_techdoc_yml)
+export(use_tech_doc_yml)
 export(use_workflow_yml)
 importFrom(magrittr,"%>%")
