--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,9 @@ Imports:
     glue,
     dplyr,
     rlang,
-    purrr
+    purrr,
+    withr,
+    pool
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
