added use_emf_ga and its tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(collect_metadata)
 export(resource_color)
 export(use_data_yml)
+export(use_emf_ga)
 export(use_metadata_yml)
 export(use_model_yml)
 export(use_softwork_yml)
