--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,11 @@ Imports:
     rlang,
     purrr,
     withr,
-    pool
+    pool,
+    usethis,
+    DBI,
+    stringr,
+    tibble
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
