--- a/inst/metadata_templates/softwork.yml
+++ b/inst/metadata_templates/softwork.yml
@@ -5,7 +5,7 @@ emf_public: true
 emf_automatized: true
 emf_reproducible: false
 emf_draft: true
-edges: ['']
+nodes: ['']
 authors: ['']
 authors_aff: ['']
 resource_link: ''
