implemented render functions to update web project

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,17 @@
 
 export("%>%")
 export(collect_metadata)
+export(create_workflow_page)
 export(delete_resource_from_db)
+export(emf_temp_folder)
+export(pq__text_to_vector_parser)
+export(render_workflow_fragment)
 export(resource_color)
 export(use_data_yml)
 export(use_emf_ga)
 export(use_metadata_yml)
 export(use_model_yml)
+export(use_public_table)
 export(use_softwork_yml)
 export(use_tech_doc_yml)
 export(use_workflow_yml)
