added update_workflow_pages functions and helpers, tested

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,10 @@ export(create_workflow_page)
 export(delete_resource_from_db)
 export(emf_temp_folder)
 export(pq__text_to_vector_parser)
+export(public_workflows)
 export(render_workflow_fragment)
 export(resource_color)
+export(update_workflow_pages)
 export(use_data_yml)
 export(use_emf_ga)
 export(use_metadata_yml)
