--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(delete_resource_from_db)
 export(emf_temp_folder)
 export(pq__text_to_vector_parser)
 export(public_workflows)
-export(render_workflow_fragment)
+export(render_html_fragment)
 export(resource_color)
 export(update_workflow_pages)
 export(use_data_yml)
