improved render workflow. Now messages are clearer and order of defers and changes of project are more logical. File is overwritten only if changes are detected

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,8 @@ Imports:
     DBI,
     stringr,
     tibble,
-    dbplyr
+    dbplyr,
+    crayon
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
