--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,20 @@
 
 export("%>%")
 export(collect_metadata)
+export(create_softwork_page)
 export(create_workflow_page)
 export(delete_resource_from_db)
 export(emf_temp_folder)
 export(pq__text_to_vector_parser)
+export(public_data)
+export(public_models)
+export(public_softworks)
+export(public_tech_docs)
 export(public_workflows)
 export(render_html_fragment)
 export(resource_color)
-export(update_workflow_pages)
+export(update_all_resource_pages)
+export(update_resource_pages_by_type)
 export(use_data_yml)
 export(use_emf_ga)
 export(use_metadata_yml)
