--- a/.github/workflows/collect_metadata.yml
+++ b/.github/workflows/collect_metadata.yml
@@ -36,6 +36,14 @@ jobs:
           sudo apt-get install -y git
           sudo apt-get install -y libgit2-dev
           sudo apt-get install -y libpq-dev
+          sudo apt-get install -y libfontconfig1-dev
+          sudo apt-get install -y libfreetype6-dev
+          sudo apt-get install -y libfribidi-dev
+          sudo apt-get install -y libharfbuzz-dev
+          sudo apt-get install -y libjpeg-dev
+          sudo apt-get install -y libpng-dev
+          sudo apt-get install -y libtiff-dev
+          sudo apt-get install -y libxml2-dev
 
       - name: Cache keys dependencies
         run: |
