added create_tech_doc_page, creating a new helper, create_rmd_page for rendering workflows and tech_docs that are basically the same

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%>%")
 export(collect_metadata)
 export(create_softwork_page)
+export(create_tech_doc_page)
 export(create_workflow_page)
 export(delete_resource_from_db)
 export(emf_temp_folder)
