--- a/inst/metadata_templates/core.yml
+++ b/inst/metadata_templates/core.yml
@@ -5,6 +5,7 @@ emf_public: false
 emf_automatized: false
 emf_reproducible: false
 emf_draft: true
+emf_data_type: 'emf_source_data'
 nodes: ['']
 authors: ['']
 authors_aff: ['']
