--- a/inst/metadata_templates/workflow.yml
+++ b/inst/metadata_templates/workflow.yml
@@ -9,13 +9,7 @@ emf_data_type: 'emf_data_product'
 data_repository: ''
 model_repository: ''
 nodes: ['']
-authors:
-  emf:
-    name: EMF
-    surname: (Ecosystem Modelling Facility)
-    aff: CREAF
-    aff_link: emf.creaf.cat
-    summary: ''
+authors: ['']
 tags: ['']
 links:
   url_pdf: ''
