--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,8 @@ Imports:
     dbplyr,
     crayon,
     pkgdown,
-    gert
+    gert,
+    readxl
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
