added update web functions, no tests yet

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(public_workflows)
 export(render_rd_fragment)
 export(resource_color)
 export(update_all_resource_pages)
+export(update_emf_web)
 export(update_resource_pages_by_type)
 export(use_data_yml)
 export(use_emf_ga)
