new_render_rmd flow, no tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(public_softworks)
 export(public_tech_docs)
 export(public_workflows)
 export(render_rd_fragment)
+export(render_resource_pages)
 export(resource_color)
 export(update_all_resource_pages)
 export(update_emf_web)
