render web flow finished, cleaning and test yet to do

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(collect_metadata)
 export(collect_metadata_creaf)
 export(collect_metadata_external)
+export(copy_emf_web)
 export(create_data_page)
 export(create_model_page)
 export(create_softwork_page)
@@ -18,7 +19,6 @@ export(public_softworks)
 export(public_tech_docs)
 export(public_workflows)
 export(render_rd_fragment)
-export(render_resource_pages)
 export(resource_color)
 export(update_all_resource_pages)
 export(update_emf_web)
