--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,8 @@ Imports:
     crayon,
     pkgdown,
     gert,
-    readxl
+    readxl,
+    ssh
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
