update_metadata_collection_ga added and tested

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(collect_metadata_external)
 export(copy_emf_web)
 export(delete_resource_from_db)
 export(emf_temp_folder)
+export(metadata_db_con)
 export(public_data)
 export(public_models)
 export(public_softworks)
@@ -14,6 +15,7 @@ export(public_tech_docs)
 export(public_workflows)
 export(resource_color)
 export(update_emf_web)
+export(update_metadata_collection_ga)
 export(use_data_yml)
 export(use_emf_ga)
 export(use_metadata_yml)
