emfdata file utils from EMFdatautils

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(collect_metadata_creaf)
 export(collect_metadata_external)
 export(copy_emf_web)
 export(delete_resource_from_db)
+export(download_emfdata)
 export(emf_temp_folder)
 export(metadata_db_con)
 export(public_data)
