added read_emfdata based on Miquel functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(public_models)
 export(public_softworks)
 export(public_tech_docs)
 export(public_workflows)
+export(read_emfdata)
 export(resource_color)
 export(update_emf_web)
 export(update_metadata_collection_ga)
