--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,7 +36,9 @@ Imports:
     pkgdown,
     gert,
     readxl,
-    ssh
+    ssh,
+    curl,
+    readr
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
