added contents_emfdata function based on Miquel function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(collect_metadata)
 export(collect_metadata_creaf)
 export(collect_metadata_external)
+export(contents_emfdata)
 export(copy_emf_web)
 export(delete_resource_from_db)
 export(download_emfdata)
