added save_emfdata based on Miquel functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,6 @@ export(collect_metadata_external)
 export(contents_emfdata)
 export(copy_emf_web)
 export(delete_resource_from_db)
-export(download_emfdata)
 export(emf_temp_folder)
 export(metadata_db_con)
 export(public_data)
@@ -17,6 +16,7 @@ export(public_tech_docs)
 export(public_workflows)
 export(read_emfdata)
 export(resource_color)
+export(save_emfdata)
 export(update_emf_web)
 export(update_metadata_collection_ga)
 export(use_data_yml)
