removed usethis::ui_* calls, subtituted by cli::* calls. Removed depecrated dplyr::all_equal call, substituted by all.equal

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,8 @@ Imports:
     readxl,
     ssh,
     curl,
-    readr
+    readr,
+    cli
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
