added update_docs_site to devops helpers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(public_workflows)
 export(read_emfdata)
 export(resource_color)
 export(save_emfdata)
+export(update_docs_site)
 export(update_emf_web)
 export(update_metadata_collection_ga)
 export(use_data_yml)
