updated metadata table

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,9 @@ export(contents_emfdata)
 export(copy_emf_web)
 export(delete_resource_from_db)
 export(emf_temp_folder)
+export(matomo_emf_visits)
+export(matomo_lfc_events)
+export(matomo_lfc_visits)
 export(metadata_db_con)
 export(public_data)
 export(public_models)
