implemented pipelines yaml and metadata retrieval

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(contents_emfdata)
 export(copy_emf_web)
 export(delete_resource_from_db)
 export(emf_temp_folder)
+export(internal_pipelines)
 export(matomo_emf_visits)
 export(matomo_lfc_events)
 export(matomo_lfc_visits)
@@ -26,6 +27,7 @@ export(use_data_yml)
 export(use_emf_ga)
 export(use_metadata_yml)
 export(use_model_yml)
+export(use_pipeline_yml)
 export(use_public_table)
 export(use_softwork_yml)
 export(use_tech_doc_yml)
