exported nodes_diagram_generator function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(matomo_emf_visits)
 export(matomo_lfc_events)
 export(matomo_lfc_visits)
 export(metadata_db_con)
+export(nodes_diagram_generator)
 export(public_data)
 export(public_models)
 export(public_softworks)
