--- a/.github/workflows/collect_metadata.yml
+++ b/.github/workflows/collect_metadata.yml
@@ -1,12 +1,11 @@
 on:
-  push:
-    branches:
-      - main
-      - master
-  pull_request:
-    branches:
-      - main
-      - master
+  - push:
+      branches:
+        - main
+  - pull_request:
+      branches:
+        - main
+  - workflow_dispatch
 
 name: collect_metadata
 
