--- a/.github/workflows/collect_metadata.yml
+++ b/.github/workflows/collect_metadata.yml
@@ -1,11 +1,11 @@
 on:
-  - push:
+  push:
       branches:
         - main
-  - pull_request:
+  pull_request:
       branches:
         - main
-  - workflow_dispatch
+  workflow_dispatch:
 
 name: collect_metadata
 
